--- a/public_html/index.html
+++ b/public_html/index.html
@@ -6,13 +6,87 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" 
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" 
+          crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+  <title>Home</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" 
+                data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" 
+                aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="forms.html">Forms</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="tables.html">Tables</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" 
+                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Dropdown
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Something else here</a>
+              </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#">Disabled</a>
+            </li>
+          </ul>
+          <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          </form>
+        </div>
+</nav>
+      <div class="container" style="margin-top:70px">
+         Lorem Ipsum
+"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."
+"Non c’è nessuno a cui piaccia il dolore in sé, che lo ricerchi e che voglia riceverlo, semplicemente perché è dolore..."
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras pulvinar tempor nunc, eu ultricies nisl tincidunt nec. Nulla consequat urna nec enim varius, id gravida lorem euismod. Vestibulum a hendrerit massa. Curabitur suscipit aliquam diam, sit amet pretium ipsum. Proin sit amet tellus non mauris finibus luctus sit amet vel libero. Phasellus tempor neque sed accumsan rutrum. Ut in nulla vel purus semper fermentum. Maecenas id eleifend dui, ut bibendum ante. Suspendisse ut mauris in leo dignissim facilisis. Etiam enim orci, tristique vitae sem eu, vehicula sagittis neque.
+
+Vestibulum eget mi quis nunc dictum varius. Curabitur mattis elementum nulla, quis cursus nisl dictum id. Curabitur tempus aliquam purus, vel fringilla velit iaculis vitae. Nam convallis gravida aliquet. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras euismod vestibulum sapien, eu ultricies mauris. Vestibulum in consequat mauris. Quisque eu nisl euismod, tristique dui sit amet, pulvinar ex. Sed vitae sem sapien. Maecenas mattis rhoncus arcu nec molestie. Pellentesque vulputate lectus nisi, id tincidunt odio laoreet non. Vestibulum quis dui ut ipsum dapibus bibendum. Curabitur quam mauris, auctor facilisis elementum vitae, dictum non ipsum. Proin ullamcorper, mi quis luctus ullamcorper, ante velit ullamcorper orci, in sagittis nulla ex sed neque. Etiam a tincidunt quam. Morbi maximus viverra nisl, nec blandit felis ultrices vitae.
+
+Aenean maximus venenatis erat non varius. Pellentesque eget scelerisque turpis. Vivamus ac imperdiet mi, consectetur iaculis diam. Suspendisse convallis, metus a mattis vehicula, libero tellus dignissim felis, quis blandit ipsum magna eget nibh. Mauris eu auctor augue. Nullam gravida, turpis non pretium ornare, lorem velit pulvinar mi, quis posuere diam dolor et enim. In interdum libero sit amet enim gravida sollicitudin. Proin ut sapien nec massa facilisis scelerisque id eget justo. Mauris non lacus tristique, iaculis ex et, bibendum elit. Quisque sed ullamcorper metus, ac sollicitudin diam. Curabitur vehicula pharetra condimentum. Fusce ut nulla quis sem placerat auctor ac in quam. Mauris lectus sapien, fringilla ac diam eget, ultrices vulputate arcu. Morbi suscipit mauris ex, ut consequat diam condimentum eget.
+
+In hac habitasse platea dictumst. Vestibulum sed condimentum eros. Nam faucibus luctus condimentum. Vestibulum vel dui ipsum. Suspendisse sed euismod ligula, a aliquet ante. Donec vitae turpis ex. Fusce sagittis dui ultrices porta gravida. Suspendisse risus diam, mattis aliquet venenatis vel, pretium in tellus. Etiam quam est, fringilla quis iaculis tristique, porta commodo purus. Ut mollis est et sapien convallis ullamcorper. Phasellus neque purus, luctus sed lectus in, volutpat aliquet mauris. Suspendisse nec placerat sem, ut suscipit lacus. Morbi suscipit lectus mi, sit amet ullamcorper ante porttitor a. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nam vehicula consectetur viverra. Cras semper a eros sed vehicula.
+
+Mauris in dui consequat, euismod elit vitae, sollicitudin massa. Integer consectetur tortor vel sollicitudin scelerisque. Nunc iaculis pharetra velit non pulvinar. Etiam quis laoreet nibh, at consectetur nisi. Morbi quis tristique ante. In hac habitasse platea dictumst. Maecenas vitae purus aliquet, vehicula enim vel, accumsan est. Etiam nec ultricies massa, sed elementum risus. Aenean dictum felis mi, eget dapibus nulla tincidunt in. Aliquam erat volutpat. Phasellus vel tincidunt sapien.
+Generati 5 paragrafi, 515 parole, 3552 byte di Lorem Ipsum
+
+Lorem Ipsum
+"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."
+"Non c’è nessuno a cui piaccia il dolore in sé, che lo ricerchi e che voglia riceverlo, semplicemente perché è dolore..."
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras pulvinar tempor nunc, eu ultricies nisl tincidunt nec. Nulla consequat urna nec enim varius, id gravida lorem euismod. Vestibulum a hendrerit massa. Curabitur suscipit aliquam diam, sit amet pretium ipsum. Proin sit amet tellus non mauris finibus luctus sit amet vel libero. Phasellus tempor neque sed accumsan rutrum. Ut in nulla vel purus semper fermentum. Maecenas id eleifend dui, ut bibendum ante. Suspendisse ut mauris in leo dignissim facilisis. Etiam enim orci, tristique vitae sem eu, vehicula sagittis neque.
+
+Vestibulum eget mi quis nunc dictum varius. Curabitur mattis elementum nulla, quis cursus nisl dictum id. Curabitur tempus aliquam purus, vel fringilla velit iaculis vitae. Nam convallis gravida aliquet. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras euismod vestibulum sapien, eu ultricies mauris. Vestibulum in consequat mauris. Quisque eu nisl euismod, tristique dui sit amet, pulvinar ex. Sed vitae sem sapien. Maecenas mattis rhoncus arcu nec molestie. Pellentesque vulputate lectus nisi, id tincidunt odio laoreet non. Vestibulum quis dui ut ipsum dapibus bibendum. Curabitur quam mauris, auctor facilisis elementum vitae, dictum non ipsum. Proin ullamcorper, mi quis luctus ullamcorper, ante velit ullamcorper orci, in sagittis nulla ex sed neque. Etiam a tincidunt quam. Morbi maximus viverra nisl, nec blandit felis ultrices vitae.
+
+Aenean maximus venenatis erat non varius. Pellentesque eget scelerisque turpis. Vivamus ac imperdiet mi, consectetur iaculis diam. Suspendisse convallis, metus a mattis vehicula, libero tellus dignissim felis, quis blandit ipsum magna eget nibh. Mauris eu auctor augue. Nullam gravida, turpis non pretium ornare, lorem velit pulvinar mi, quis posuere diam dolor et enim. In interdum libero sit amet enim gravida sollicitudin. Proin ut sapien nec massa facilisis scelerisque id eget justo. Mauris non lacus tristique, iaculis ex et, bibendum elit. Quisque sed ullamcorper metus, ac sollicitudin diam. Curabitur vehicula pharetra condimentum. Fusce ut nulla quis sem placerat auctor ac in quam. Mauris lectus sapien, fringilla ac diam eget, ultrices vulputate arcu. Morbi suscipit mauris ex, ut consequat diam condimentum eget.
+
+In hac habitasse platea dictumst. Vestibulum sed condimentum eros. Nam faucibus luctus condimentum. Vestibulum vel dui ipsum. Suspendisse sed euismod ligula, a aliquet ante. Donec vitae turpis ex. Fusce sagittis dui ultrices porta gravida. Suspendisse risus diam, mattis aliquet venenatis vel, pretium in tellus. Etiam quam est, fringilla quis iaculis tristique, porta commodo purus. Ut mollis est et sapien convallis ullamcorper. Phasellus neque purus, luctus sed lectus in, volutpat aliquet mauris. Suspendisse nec placerat sem, ut suscipit lacus. Morbi suscipit lectus mi, sit amet ullamcorper ante porttitor a. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nam vehicula consectetur viverra. Cras semper a eros sed vehicula.
+
+Mauris in dui consequat, euismod elit vitae, sollicitudin massa. Integer consectetur tortor vel sollicitudin scelerisque. Nunc iaculis pharetra velit non pulvinar. Etiam quis laoreet nibh, at consectetur nisi. Morbi quis tristique ante. In hac habitasse platea dictumst. Maecenas vitae purus aliquet, vehicula enim vel, accumsan est. Etiam nec ultricies massa, sed elementum risus. Aenean dictum felis mi, eget dapibus nulla tincidunt in. Aliquam erat volutpat. Phasellus vel tincidunt sapien.
+Generati 5 paragrafi, 515 parole, 3552 byte di Lorem Ipsum
+
+ 
+      </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
