--- a/public_html/tables.html
+++ b/public_html/tables.html
@@ -35,11 +35,13 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" 
                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Dropdown
+                Components
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" href="components.html#alerts">Alerts</a>
+                <a class="dropdown-item" href="#">Badge</a>
+                <a class="dropdown-item" href="#">Breadcrumb</a>
+                <a class="dropdown-item" href="#">Jumbotron</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#">Something else here</a>
               </div>
@@ -54,9 +56,9 @@
           </form>
         </div>
 </nav>   
-      <div class="container mt-5">
-         <table class="table table-striped table-bordered">
-            <thead class="table-dark">
+      <div class="container" style="margin-top:70px">
+         <table class="table table-striped">
+            <thead class="table-primary">
               <tr>
                 <th scope="col">#</th>
                 <th scope="col">First</th>
